deployment/client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: client
    spec:
      containers:
      - args:
        - npm
        - start
        image: us.gcr.io/crypto-trends/client:latest
        name: client
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
