deployment/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
      - env:
        - name: DEV_SECRET_KEY_BASE
          value: 'dev_secret_base'
        - name: DEV_SECRET_KEY_API
          value: 'dev_secret_api'
        - name: SECRET_KEY_BASE
          value:
        - name: SECRET_KEY_API
          value:
      - args:
        - bundle
        - exec
        - rails
        - s
        - -p
        - "9999"
        - -b
        - 0.0.0.0
        image: us.gcr.io/crypto-trends/server:latest
        name: server
        ports:
        - containerPort: 9999
        resources: {}
      restartPolicy: Always
status: {}
