deployment/client-kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: client
    spec:
      containers:
      - args:
        - npm
        - run
        - start-spa-prod
        image: us.gcr.io/blockterm-188823/client:latest
        name: client
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: client
  type: LoadBalancer
  loadBalancerIP: "35.197.20.135"
status:
  loadBalancer: {}
