deployment/kube-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: us.gcr.io/block-191602/client:latest
        name: client
        ports:
        - containerPort: 80
        args:
        - npm
        - run
        - start-spa-prod
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: client
  type: NodePort
status:
  loadBalancer: {}
