deployment/kube-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres:9.4.4
        name: db
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata
          name: db-volume
      restartPolicy: Always
      volumes:
      - name: db-volume
        gcePersistentDisk:
          pdName: pg-db-disk
          fsType: ext4
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: db
  type: NodePort
status:
  loadBalancer: {}
