deployment/kube-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: us.gcr.io/block-191602/server:latest
        ports:
        - containerPort: 80
        args:
        - bundle
        - exec
        - rails
        - s
        - -p
        - "80"
        - -b
        - 0.0.0.0
        resources: {}
      restartPolicy: Always
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: server
  type: NodePort
status:
  loadBalancer: {}
