deployment/server-kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
      - name: server
        image: us.gcr.io/blockterm-188823/server:latest
        ports:
        - containerPort: 80
        args:
        - bundle
        - exec
        - rails
        - s
        - -p
        - "80"
        - -b
        - 0.0.0.0
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: server
  type: NodePort
  loadBalancerIP: "35.197.3.243"
status:
  loadBalancer: {}
