deployment/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: server
  type: LoadBalancer
  loadBalancerIP: "35.199.161.76"
status:
  loadBalancer: {}
