deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blockterm-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - blockterm.com
    - www.blockterm.com
    - api.blockterm.com
    - cors.blockterm.com
    secretName: block-tls
  rules:
  - host: blockterm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 80
  - host: www.blockterm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 80
  - host: api.blockterm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 80
  - host: cors.blockterm.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cors
          servicePort: 80
